klee/examples/tutorial3/klee-out-1/test000138.assert.err
Error: ASSERTION FAIL: 0
File: maze.c
Line: 106
assembly.ll line: 193
Stack: 
	#000000193 in main (=1, =93935820113152) at maze.c:106
